# eurokura

./: .gitignore  .gitmodules  CMakeLists.txt  design.dot
srcs/: main.cpp
srcs/generators/: dx7.h  envelope.h  scale.h  view_generator.h  wavetable.h
srcs/math/: interpolation.h
srcs/type_support/: array.h  constants.h
srcs/wavetables/: euclid.h  wavetable_generator.h  wavetables.h
